--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -924,7 +924,6 @@
     <input id="scroll_position" type="text" name="scroll_position" style="display: none;" value="0">
     <input id="pending_input" type="text" name="pending" style="display: none;" value="{{ pending }}">
     <input id="checked_input" type="text" name="checked" style="display: none;" value="{{ checked }}">
-    <input id="loc_input" type="text" name="loc" style="display: none;" value="{{ loc }}">
     <input id="orderby_input" type="text" name="orderby" style="display: none;" value="{{ orderby }}">
     <input id="tiger_certainty_input" type="text" name="tiger_certainty" style="display: none;"
            value="{{ tiger_certainty }}">
@@ -2077,7 +2076,6 @@
             $("#scroll_position").val(0);
             $("#pending_input").val('na');
             $("#checked_input").val('na');
-            $("#loc_input").val('na');
             $("#orderby_input").val('date');
             $("#tiger_certainty_input").val('all');
             $("#site_certainty_input").val('all');
@@ -2132,7 +2130,7 @@
                 zIndexMargin: 9999,
                 dataSource: function(term, object){
                     $.ajax('/api/uuid_list_autocomplete/', {
-                        data: { uuid: term, loc: $('#loc_input').val(), start: 0 },
+                        data: { uuid: term, start: 0 },
                         dataType: 'json',
                         success: function(data){
                             var $items = [];
