--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -228,6 +228,7 @@
         $("#tiger_certainty_select").val("{{ tiger_certainty }}");
         $("#ns_select").val("{{ ns_exec }}");
         $("#site_certainty_select").val("{{ site_certainty }}");
+        $("#result_source_select").val("{{ result_source }}");
         $("#status_select").val("{{ status }}");
 
         var public_btn = $("#public_btn"), flagged_btn = $("#flagged_btn"), hidden_btn = $("#hidden_btn");
@@ -263,6 +264,7 @@
             var this_orderby = $("#orderby_select").val();
             var this_tiger_certainty = $("#tiger_certainty_select").val();
             var this_site_certainty = $("#site_certainty_select").val();
+            var this_result_source = $("#result_source_select").val();
             var this_status = $("#status_select").val();
             var filter_tags = $("#tags_filter").tagit("assignedTags");
             var this_ns_exec = $("#ns_select").val();
@@ -273,6 +275,7 @@
             $("#orderby_input").val(this_orderby);
             $("#tiger_certainty_input").val(this_tiger_certainty);
             $("#site_certainty_input").val(this_site_certainty);
+            $("#result_source_input").val(this_result_source);
             $("#ns_id_input").val(this_ns_exec);
             $("#status_input").val(this_status);
             $("#pending_input").val(pending);
@@ -280,6 +283,7 @@
             var qp = '?orderby=' + this_orderby;
             qp += '&tiger_certainty=' + this_tiger_certainty;
             qp += '&site_certainty=' + this_site_certainty;
+            qp += '&result_source=' + this_result_source;
             qp += '&tags_filter=' + str_tags;
             qp += '&status=' + this_status;
             qp += '&pending=' + pending;
