--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -297,9 +297,9 @@
                 {{ form.not_sure }}
             </div>
             <div data-id="{{ form.instance.version_UUID }}" class="ia_val {{form.instance.type}}" style="">
-                <label style="color:white;"><b>IA Value: {{ form.instance.insect_confidence|floatformat:4 }}</b></label>
+                <label style="color:white;"><b>IA Value: {{ form.instance.identification_task.pred_insect_confidence|floatformat:4 }}</b></label>
             </div>
-            <div id="ia{{ form.instance.version_UUID }}" data-ia-value="{{ form.instance.insect_confidence }}" data-id="{{ form.instance.version_UUID }}" class="ia_graph {{form.instance.type}}" style="">
+            <div id="ia{{ form.instance.version_UUID }}" data-ia-value="{{ form.instance.identification_task.pred_insect_confidence }}" data-id="{{ form.instance.version_UUID }}" class="ia_graph {{form.instance.type}}" style="">
             </div>
         {% endif %}
 
