Entolab deprecation message

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -307,6 +307,7 @@
 
 
     <div class="container">
+        {% include "tigacrafting/entolab_deprecation_notice.html" %}
 
     <div class="starter-template">
 
