--- a/tigacrafting/templates/tigacrafting/expert_report_status.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_status.html
@@ -205,6 +205,7 @@
 
 
     <div class="container">
+        {% include "tigacrafting/entolab_deprecation_notice.html" with new_path='identification_tasks/' %}
 
     <div class="starter-template">
 
