Remove unused static

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -122,12 +122,12 @@
 
         var mosquito_icon_class = L.Icon.Default.extend({
             options: {
-                iconUrl: '{% static "tigamap/yellow_icon.png" %}'
+                iconUrl: '{% static "tigacrafting/yellow_icon.png" %}'
             }
         });
         var site_icon_class = L.Icon.Default.extend({
             options: {
-                iconUrl: '{% static "tigamap/blue_icon.png" %}'
+                iconUrl: '{% static "tigacrafting/blue_icon.png" %}'
             }
         });
 
