--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -175,13 +175,13 @@
     <script src="{% static 'tigacrafting/javascript/coarse_filter.js' %}"></script>
     <script src="{% static 'tigacrafting/d3/d3.min.js' %}"></script>
     <script src="{% static 'tigacrafting/ia_graph.js' %}"></script>
-    <script src="{% static 'tigacrafting/javascript/hover-preview.min.js' %}"></script>
+    <script src="{% static leaflet_css'tigacrafting/javascript/hover-preview.min.js' %}"></script>
     <script src="{% static 'tigacrafting/toastr/toastr.min.js' %}"></script>
     {% leaflet_js %}
     {% leaflet_css %}
     <script>
         const csrf_token = '{{ csrf_token }}';
-        const iconurl = '{% static "tigamap/yellow_icon.png" %}';
+        const iconurl = '{% static "tigacrafting/yellow_icon.png" %}';
     </script>
 </head>
 <body>
