--- a/tigacrafting/templates/tigacrafting/expert_validation.html
+++ b/tigacrafting/templates/tigacrafting/expert_validation.html
@@ -54,7 +54,7 @@
 
         var mosquito_icon_class = L.Icon.Default.extend({
             options: {
-                iconUrl: '{% static "tigamap/yellow_icon.png" %}'
+                iconUrl: '{% static "tigacrafting/yellow_icon.png" %}'
             }
         });
 
