Remove statics from stats

--- a/stats/templates/stats/directory.html
+++ b/stats/templates/stats/directory.html
@@ -6,11 +6,11 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <title>MosquitoAlert Stats</title>
 
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">
 
-        <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
-        <script src={% static "tigacrafting/bootstrap-3.2.0-dist/js/bootstrap.min.js" %}></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@1.11.1/dist/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/js/bootstrap.min.js"></script>
         <style>
             .separador_seccio {
                 margin-top: 30px;
