--- a/stats/templates/stats/hashtag_map.html
+++ b/stats/templates/stats/hashtag_map.html
@@ -6,8 +6,8 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <title>Mosquito Alert - Hashtag map</title>
 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">
         <link href="https://cdn.jsdelivr.net/npm/leaflet@0.7.5/dist/leaflet.min.css" rel="stylesheet">
         <link href="https://app.unpkg.com/leaflet.markercluster@0.5.0/files/dist/MarkerCluster.css" rel="stylesheet">
         <link href="https://app.unpkg.com/leaflet.markercluster@0.5.0/files/dist/MarkerCluster.Default.css" rel="stylesheet">
