--- a/stats/templates/stats/report_stats_ccaa.html
+++ b/stats/templates/stats/report_stats_ccaa.html
@@ -6,14 +6,14 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <title>MosquitoAlert Stats</title>
 
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">
         <link rel="stylesheet" href={% static "stats/workload.css" %}>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="https://code.highcharts.com/maps/highmaps.js"></script>
-        <script src={% static "stats/underscore-min.js" %}></script>
+        <script src="https://cdn.jsdelivr.net/npm/underscore@1.9.0/underscore-min.min.js"></script>
         <script src={% static "stats/geojson_ccaa.js" %}></script>
         <script src={% static "stats/report_stats_ccaa.js" %}></script>
         <script>
