--- a/stats/templates/stats/report_stats_ccaa_pie.html
+++ b/stats/templates/stats/report_stats_ccaa_pie.html
@@ -6,8 +6,8 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <title>MosquitoAlert Stats</title>
 
-        <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css' %}">
-        <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-select/css/bootstrap-select.min.css' %}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">
         <link rel="stylesheet" href="{% static 'stats/workload.css' %}">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -19,9 +19,9 @@
         <!--<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
         <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>-->
         <script src="https://code.highcharts.com/mapdata/countries/es/es-all.js"></script>
-        <script src="{% static 'stats/isotope.pkgd.min.js' %}"></script>
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 
-        <script src="{% static 'stats/underscore-min.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/underscore@1.9.0/underscore-min.min.js"></script>
         <script src="{% static 'stats/report_stats_ccaa_pie.js' %}"></script>
         <script>
             var map_data = JSON.parse('{{ map_data | escapejs }}');
