--- a/stats/templates/stats/speedmeter.html
+++ b/stats/templates/stats/speedmeter.html
@@ -6,14 +6,14 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <title>MosquitoAlert Stats</title>
 
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">
         <link rel="stylesheet" href={% static "stats/mosquito_ccaa_rich_iframetest.css" %}>
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/highcharts-more.js"></script>
         <script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
-        <script src={% static "stats/isotope.pkgd.min.js" %}></script>
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
         <script src={% static "stats/speedmeter.js" %}></script>
         <script>
             var week_init_value = 0;
