--- a/stats/templates/stats/sunburst.html
+++ b/stats/templates/stats/sunburst.html
@@ -6,8 +6,8 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <title>MosquitoAlert Stats</title>
 
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">
         <link rel="stylesheet" href={% static "stats/workload.css" %}>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -15,8 +15,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.15/proj4.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/modules/sunburst.js"></script>
-        <script src={% static "stats/isotope.pkgd.min.js" %}></script>
-        <script src={% static "stats/underscore-min.js" %}></script>
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/underscore@1.9.0/underscore-min.min.js"></script>
         <script src={% static "stats/sunburst.js" %}></script>
         <script>
             var data = JSON.parse('{{ data | escapejs }}');
