--- a/stats/templates/stats/user_ranking.html
+++ b/stats/templates/stats/user_ranking.html
@@ -8,17 +8,17 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <title>MosquitoAlert Stats</title>
 
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
-        <link rel="stylesheet" href={% static "tigacrafting/jquery-ui/jquery-ui.css" %}>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.css">
         <link rel="stylesheet" href={% static "stats/css/user_ranking.css" %}>
         <link rel="stylesheet" href={% static "stats/datatables.min.css" %}>
         <script type="text/javascript" src="{% url 'javascript-catalog' %}"></script>
         <script>
             var current_locale = '{{ LANGUAGE_CODE }}';
         </script>
-        <script src={% static "tigacrafting/jquery/1.8.3/jquery-1.8.3.min.js" %}></script>
-        <script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
         <script src={% static "stats/user_ranking.js" %}></script>
         <script src={% static "stats/datatables.min.js" %}></script>
         <script src={% static "stats/cookies.js" %}></script>
