--- a/tigacrafting/templates/tigacrafting/notification_detail.html
+++ b/tigacrafting/templates/tigacrafting/notification_detail.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">
     <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/font-awesome@4.2.0/css/font-awesome.min.css>
     <link rel="stylesheet" href={% static "tigacrafting/tigacrafting_style.css" %}>
-    <link rel="stylesheet" href={% static "tigacrafting/jquery-ui/jquery-ui.min.css" %}>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.css">
     <link rel="stylesheet" href={% static "tigacrafting/tokenize2/tokenize2.min.css" %}>
     <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
-    <script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/js/bootstrap.min.js"></script>
 </head>
     <body>
