--- a/templates/django_messages/base.html
+++ b/templates/django_messages/base.html
@@ -21,10 +21,10 @@
             <link rel="stylesheet" href={% static "tigacrafting/tigacrafting_style.css" %}>
         {% endblock %}
         <link rel="stylesheet" href={% static "tigacrafting/tokenize2/tokenize2.min.css" %}>
-        <link rel="stylesheet" href="{% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.css" %}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.8.24/themes/base/jquery-ui.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.2.0/css/font-awesome.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src={% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.min.js" %}></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
         <script src={% static "tigacrafting/tokenize2/tokenize2.min.js" %}></script>
     </head>
     <div class="navbar-wrapper">
