--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -169,7 +169,7 @@
     </style>
     <script src="{% static 'tigacrafting/jquery/1.11.1/jquery.min.js' %}"></script>
     <script src="{% static 'tigacrafting/jquery-ui-1.12.1.custom/jquery-ui.min.js' %}"></script>
-    <script src="{% static 'tigacrafting/jquery-ui/jquery-ui.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
     <script src="{% static 'tigacrafting/jquery_blockUI/jquery.blockUI.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/js/bootstrap.min.js"></script>
     <script src="{% static 'tigacrafting/javascript/coarse_filter.js' %}"></script>
