--- a/tigacrafting/templates/tigacrafting/entolab_license_agreement.html
+++ b/tigacrafting/templates/tigacrafting/entolab_license_agreement.html
@@ -17,7 +17,7 @@
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">
         {% endblock %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script src={% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.min.js" %}></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
         <link rel="stylesheet" href={% static "tigacrafting/tigacrafting_style.css" %}>
     </head>
     <body>
