--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -21,16 +21,12 @@
     {% block bootstrap_css %}
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/css/bootstrap.min.css" crossorigin="anonymous">
-        <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/css/bootstrap-select.min.css">-->
     {% endblock %}
 
-    <!--script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <!--script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script-->
-    <script src={% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.min.js" %}></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
     <script src={% static "tigacrafting/tag-it/tag-it.min.js" %}></script>
-    <!--link rel="stylesheet" href={% static "tigacrafting/jquery-ui/jquery-ui.css" %}-->
-    <link rel="stylesheet" href={% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.css" %}>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.8.24/themes/base/jquery-ui.min.css">
     <link rel="stylesheet" href={% static "tigacrafting/tag-it/jquery.tagit.css" %}>
     <link rel="stylesheet" href={% static "tigacrafting/tokenize2/tokenize2.min.css" %}>
 
