--- a/tigacrafting/templates/tigacrafting/geo_report_assign.html
+++ b/tigacrafting/templates/tigacrafting/geo_report_assign.html
@@ -25,9 +25,9 @@
     {% endblock %}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src={% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.min.js" %}></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.8.24/jquery-ui.min.js"></script>
 
-    <link rel="stylesheet" href={% static "tigacrafting/jquery-ui-1.8.24/jquery-ui.css" %}>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.8.24/themes/base/jquery-ui.min.css">
     {% block fa_css %}
         <!-- FA CSS -->
         <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/font-awesome@4.2.0/css/font-awesome.min.css>
