--- a/tigacrafting/templates/tigacrafting/notifications_version_two.html
+++ b/tigacrafting/templates/tigacrafting/notifications_version_two.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href={% static "tigacrafting/tigacrafting_style.css" %}>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.css">
     <link rel="stylesheet" href={% static "tigacrafting/tokenize2/tokenize2.min.css" %}>
-    <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
     <script src=https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/js/bootstrap-select.min.js></script>
