--- a/tigacrafting/templates/tigacrafting/base.html
+++ b/tigacrafting/templates/tigacrafting/base.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
     <script src={% static "tigacrafting/tokenize2/tokenize2.min.js" %}></script>
-        <script src={% static "tigacrafting/tinymce/js/tinymce/tinymce.min.js" %}></script>
+        <script src="https://cdn.jsdelivr.net/npm/tinymce@4.5.5/tinymce.min.js"></script>
         <div class="navbar-wrapper">
             <div id="notifications_navbar" class="navbar-fixed-top navbar navbar-inverse" role="navigation">
                 <div id="navbar" class="container">
