--- a/tigacrafting/templates/tigacrafting/notifications_version_two.html
+++ b/tigacrafting/templates/tigacrafting/notifications_version_two.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
     <script src=https://cdn.jsdelivr.net/npm/bootstrap-select@1.7.2/dist/js/bootstrap-select.min.js></script>
     <script src={% static "tigacrafting/tokenize2/tokenize2.min.js" %}></script>
-    <script src={% static "tigacrafting/tinymce/js/tinymce/tinymce.min.js" %}></script>
+    <script src="https://cdn.jsdelivr.net/npm/tinymce@4.5.5/tinymce.min.js"></script>
 </head>
 <body>
 {% block content %}
