--- a/tigacrafting/templates/tigacrafting/geo_report_assign.html
+++ b/tigacrafting/templates/tigacrafting/geo_report_assign.html
@@ -33,7 +33,7 @@
         <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/font-awesome@4.2.0/css/font-awesome.min.css>
     {% endblock %}
 
-    <link rel="stylesheet" href={% static "tigacrafting/leaflet/leaflet.css" %}>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.min.css">
     {% block fallback_bs_js %}
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -133,7 +133,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
-    <script src="{% static 'tigacrafting/leaflet/leaflet.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.min.js"></script>
     <script src="{% static 'tigacrafting/chloro_europe.js' %}"></script>
     <script src="{% static 'tigacrafting/geo_report_assign.js' %}"></script>
     <script src="{% static 'tigacrafting/leaflet.plugins/leaflet-heat.js' %}"></script>
