--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -170,7 +170,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
-    <script src="{% static 'tigacrafting/jquery_blockUI/jquery.blockUI.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-blockui@2.7.0/jquery.blockUI.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.2.0/dist/js/bootstrap.min.js"></script>
     <script src="{% static 'tigacrafting/javascript/coarse_filter.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3@7.4.4/dist/d3.min.js"></script>
