--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -176,7 +176,7 @@
     <script src="https://cdn.jsdelivr.net/npm/d3@7.4.4/dist/d3.min.js"></script>
     <script src="{% static 'tigacrafting/ia_graph.js' %}"></script>
     <script src="{% static 'tigacrafting/javascript/hover-preview.min.js' %}"></script>
-    <script src="{% static 'tigacrafting/toastr/toastr.min.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastr@2.1.4/toastr.min.js"></script>
     {% leaflet_js %}
     {% leaflet_css %}
     <script>
